[build-system]
requires = ["openai","setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "LLM-Chain"
version = "0.0.3"
authors = [
  { name="Jan Disselhoff", email="jandis409@gmail.com" },
]
description = "A small package for chaining LLM API calls"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/InsanityCheck/LLM-Chain"
"Bug Tracker" = "https://github.com/InsanityCheck/LLM-Chain/issues"